Fix Template icons in the main window sidebar being clipped
The `border-radius` wasn't needed anyways.

--- a/src/renderer/src/styles/layout/main/_sidebar.sass
+++ b/src/renderer/src/styles/layout/main/_sidebar.sass
@@ -85,7 +85,6 @@
           background: rgba(#fff, .18) // TODO:
 
     &-icon
-      border-radius: 4px
       width: 15px
       height: 15px
       margin-right: 8px
